# peta-rust

./: .gitignore  Cargo.toml  Makefile  README.rst  TODO  peta.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
_content/articles/: calculus-fundamentals.rst  code-rendering-test.rst  devops-best-practices.rst  diagram-feature-test.rst  math-test-simple.rst  music-score-feature-test.rst  python-data-science.rst  quantum-mechanics.rst  rst-math-syntax-test.rst  rust-testing.rst  testing-datetime-sorting.rst  web-development-guide.rst
_content/articles/advanced-rust-patterns/: conclusions.rst  index.rst  introduction.rst  methodology.rst  results.rst
_content/articles/machine-learning-fundamentals/: conclusions.rst  index.rst  introduction.rst  methodology.rst  results.rst
_content/articles/rst-tables-guide/: index.rst
_content/books/deep-learning-with-python/: advanced-deep-learning.rst  computer-vision.rst  conclusions.rst  getting-started-with-keras.rst  index.rst  introduction-to-dl.rst  neural-networks-fundamentals.rst  text-and-sequences.rst
_content/books/diagram-guide/: advanced-features.rst  best-practices.rst  class-diagrams.rst  flowchart-diagrams.rst  gantt-charts.rst  index.rst  introduction.rst  sequence-diagrams.rst  state-diagrams.rst
_content/books/machine-learning-basics/: conclusions.rst  feature-engineering.rst  index.rst  introduction.rst  model-evaluation.rst  supervised-learning.rst  unsupervised-learning.rst
_content/books/quantum-computing-guide/: future-directions.rst  (+7 more)
_content/projects/: code-block-showcase.rst  diagram-showcase.rst  math-visualizer.rst  quantum-simulator.rst
_content/snippets/: class-social-media.rst  code-wrapping-feature.rst  cpp-algorithms.rst  derivatives.rst  flowchart-ci-pipeline.rst  gantt-project-roadmap.rst  go-web-server.rst  integrals.rst  music-score-test.rst  python-data-processing.rst  quantum-computing.rst  rust-concurrent-programming.rst  sequence-payment-processing.rst  sql-queries.rst  state-document-workflow.rst  typescript-react-component.rst  uncertainty-principle.rst  wave-function.rst
docs/: how_to_create_a_component.rst  how_to_render_math_formulas_step_by_step.rst
docs/components/: how_to_create_a_component.rst
peta/: Cargo.toml
peta/src/: lib.rs  main.rs
peta/src/assets/: css.rs  css_generator.rs  images.rs  js.rs  js_generator.rs  minifier.rs  mod.rs  pipeline.rs  table_css_generator.rs  table_js_generator.rs
peta/src/cli/: args.rs  commands.rs  component_commands.rs  mod.rs  output.rs
peta/src/components/: config.rs  discovery.rs  loader.rs  manager.rs  mod.rs  registry.rs  renderer.rs  theme.rs  version.rs
peta/src/content/: metadata.rs  mod.rs  resolver.rs  taxonomy.rs
peta/src/content/rst/: article_toc_generator.rs  book_toc_generator.rs  code_highlighter.rs  cross_ref.rs  directives.rs  math_processor.rs  math_renderer.rs  mod.rs  parser.rs  syntax_highlighter.rs  toc_generator.rs
peta/src/content/rst/code_blocks/: code_block_renderer.rs  mod.rs
peta/src/content/rst/diagrams/: class.rs  flowchart.rs  gantt.rs  mod.rs  models.rs  parser.rs  sequence.rs  state.rs
peta/src/content/rst/embedded_snippet_cards/: config.rs  embedded_snippet_card_renderer.rs  mod.rs
peta/src/content/rst/math_formulas/: math_css_generator.rs  math_js_generator.rs  math_processor.rs  math_renderer.rs  mod.rs
peta/src/content/rst/music_scores/: mod.rs  models.rs  parser.rs  renderer.rs
peta/src/content/rst/tables/: directive_parser.rs  html_generator.rs  mod.rs  parser.rs
peta/src/core/: builder.rs  config.rs  error.rs  mod.rs  site.rs  theme.rs
peta/src/deploy/: github.rs  mod.rs  netlify.rs  s3.rs  vercel.rs
peta/src/search/: indexer.rs  mod.rs  query.rs  ranking.rs
peta/src/server/: dev_server.rs  file_watcher.rs  livereload.rs  mod.rs  websocket.rs
peta/src/server/static/: index.html  livereload.js
peta/src/templates/: engine.rs  filters.rs  functions.rs  mod.rs  renderer.rs
peta/src/utils/: cache.rs  file.rs  http.rs  mod.rs  progress.rs  url.rs
peta/tests/: component_discovery_integration.rs  url_generation_test.rs
themes/default/: README.md  theme.yaml
(+310 files in other folders)
