[workspace]
members = ["peta"]
resolver = "2"

[profile.dev]
# Optimize debug builds to prevent 99% CPU usage issues
opt-level = 1          # Optimize for performance while keeping debug info
debug = true           # Keep debug symbols
overflow-checks = true # Keep overflow checks for safety
lto = false            # Disable link-time optimization for faster builds
incremental = true     # Enable incremental compilation

[profile.dev.package."*"]
# Optimize dependencies more heavily in debug builds
opt-level = 3

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# RST processing
pulldown-cmark = "0.9"
regex = "1.0"
once_cell = "1.0"

# Template system
tera = "1.19"
serde_yaml = "0.9"

# Math rendering
katex = "0.4"

# Code highlighting
syntect = "5.0"

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
notify = "6.0"

# Asset processing
image = "0.24"
css-minify = "0.3"

# Search
tantivy = "0.25"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
path-absolutize = "3.0"
glob = "0.3"
walkdir = "2.0"
termcolor = "1.0"

# Testing
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"